--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,22 @@
 {
-    "manifest_version": 3,
-    "name": "Your Extension Name",
-    "version": "1.0",
-    "description": "Extension description",
-    "permissions": ["activeTab"],
-    "action": {
-      "default_popup": "popup.html",
-      "default_icon": {
-        "16": "images/icon16.png",
-        "48": "images/icon48.png",
-        "128": "images/icon128.png"
-      }
+  "manifest_version": 3,
+  "name": "Your Extension Name",
+  "version": "1.0",
+  "description": "Extension description",
+  "permissions": [
+    "activeTab"
+
+  ],
+  "host_permissions": ["https://maps.googleapis.com/*"],
+  "action": {
+    "default_popup": "popup.html?v=1.0",
+    "default_icon": {
+      "16": "images/icon16.png",
+      "48": "images/icon48.png",
+      "128": "images/icon128.png"
     }
+  },
+  "content_security_policy": {
+    "extension_pages": "script-src 'self'; object-src 'self'; frame-ancestors 'none'; style-src 'self' https://fonts.googleapis.com;"
   }
+}
