--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
+    "cors": "^2.8.5",
     "docx": "^9.3.0",
     "file-saver": "^2.0.5",
     "mdb-react-ui-kit": "^9.0.0",
