--- a/package.json
+++ b/package.json
@@ -50,8 +50,11 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.21",
     "cross-env": "^7.0.3",
-    "gh-pages": "^6.3.0"
+    "gh-pages": "^6.3.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.3"
   },
   "homepage": "https://CodexNoob.github.io/ha"
 }
