--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.3",
     "autoprefixer": "^10.4.21",
     "cross-env": "^7.0.3",
     "gh-pages": "^6.3.0",
