--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "docx": "^9.3.0",
     "file-saver": "^2.0.5",
     "mdb-react-ui-kit": "^9.0.0",
+    "pdfjs-dist": "^2.10.377",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^18.3.1",
