--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
@@ -15,11 +17,12 @@
     "docx": "^9.3.0",
     "file-saver": "^2.0.5",
     "mdb-react-ui-kit": "^9.0.0",
-    "pdfjs-dist": "^2.10.377",
+    "pdfjs-dist": "^2.16.105",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
+    "react-pdf": "^5.7.2",
     "react-scripts": "5.0.1",
     "smoothscroll-polyfill": "^0.4.4",
     "web-vitals": "^2.1.4"
